Fix mobile version: hidden overflow-x of App

--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,6 @@ html{
 body {
   transition: background 500ms ease-in-out, color 1000ms ease-in-out;
   margin: 0;
-  overflow-x: hidden;
   font-family: 'Inter', -apple-system,  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
